# Frida-debugger

./: LICENSE.txt  README.md  docker-compose.yml
app/: Dockerfile  components.json  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/public/: index.html  manifest.json
app/src/: App.js  App.jsx
backend/: Dockerfile  nodemon.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
backend/scripts/: app_info.js  say_hi.js
backend/src/: DeviceManagerService.ts  FilesManager.ts  InjectionManager.ts  index.ts  scripts.ts
client/client/: index.html  package-lock.json  package.json  vite.config.ts
docs/: index.html  navigation.html  package-list
docs/composeApp/: index.html  navigation.html
docs/scripts/: pages.json  sourceset_dependencies.js
frida-manager-cli/: Cargo.toml
front-end/: build.gradle.kts  settings.gradle.kts
front-end-desktop/: build.gradle.kts  settings.gradle.kts
front-end-desktop/composeApp/: build.gradle.kts
front-end-desktop/gradle/: libs.versions.toml
front-end/.fleet/: receipt.json
front-end/composeApp/: build.gradle.kts
front-end/gradle/: libs.versions.toml
scripts/: all.js  app-classes.js  app_functions.js
scripts/activities/: detect_activites.js  intents.js
scripts/cryptography/: cryptography.js  random.js
scripts/data-storage/: log.js  print-stream.js  shared-preferences.js  sqlite-database.js  text-view.js
tools/: appinfo.sh  installPreqs.sh  prepareFridaEmulator.sh  preprocessed_frida_core.h  root_checker.sh  runAScript.sh  runEmulator.sh
(+297 files in other folders)
